--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.0",
     "events": "^1.0.2",
     "express": "^4.8.8",
+    "mathjs": "^3.11.2",
     "moment": "^2.12.0",
     "mysql": "^2.10.2",
     "pg": "^4.4.6",
@@ -28,6 +29,6 @@
     "sinon": "^1.10.3"
   },
   "engines": {
-      "node": "^5.6.0"
-        }
+    "node": "^5.6.0"
+  }
 }
